@@ -26,11 +26,14 @@ input#generator_limit		{color:#000; background-color:#fff; padding:8px 3px; bord
 #filter_span			{font-size:3em; display:none;}
 
 #view_search_test		{margin:0 auto; width:960px; padding:30px 0 40px 0;}
-input#view_search_string, input#view_search_string_only, input.typeahead.tt-hint	{font-size:32px; width:936px; height:48px; border:0; margin-top:10px;}
+input#view_search_string, input#view_search_string_only, input.typeahead.tt-hint	{font-size:30px; width:936px; height:48px; border:0; margin-top:10px;}
 .search_wrap			{display:inline-block; width:290px; margin-bottom:15px; min-height:50px;}
-.search_wrap:nth-child(3), .search_wrap:nth-child(6)	{margin-left:20px; margin-right:20px;}
+.search_wrap:nth-of-type(3n+3)	{margin-left:20px; margin-right:20px;}
 .search_label			{font-size:14px; padding-bottom:5px; margin-right:23px; line-height:1.2em; text-transform:uppercase;}
-.search_label img		{padding-right:7px;width:14px;height:14px;}
+td.filter_title img,
+.search_label img		{padding-right:7px; width:14px; height:14px;}
+td.filter_title span,
+.search_label span		{color:#fff; font-size:10px;}
 
 .search_wrap .chosen-container{width:290px; min-width:290px; max-width:290px;}
 #country_dropmenu .chosen-container, #publisher_dropmenu .chosen-container	{width:460px; min-width:460px; max-width:460px;}
@@ -38,6 +41,7 @@ input#view_search_string, input#view_search_string_only, input.typeahead.tt-hint
 .search_wrap.mini div#view_search_select_year_min_chosen,
 .search_wrap.mini div#view_search_select_year_max_chosen	{width:145px; min-width:145px; max-width:145px;}
 
+.search_wrap.maxi,
 .search_wrap.maxi div#view_search_select_policy_chosen	{width:600px; min-width:600px; max-width:600px;}
 
 /*	Icons in search dropdown	*/
