@@ -1021,7 +1021,7 @@ Discover Results
 Search
 
 #search_placeholder_txt
-Type (eg. Ebola) or select filters to narrow your search
+Type (eg. Ebola or Activity ID) or select filters to narrow your search
 
 #search2_placeholder_txt
 Type (eg. Ebola)
